# clawguard

./: .clawguardignore  .gitignore  CHANGELOG.md  CLA.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  DOGFOODING.md  LICENSE  README.md  REVIEW_REPORT.md  SKILL.md  action.yml  github-metadata-suggestions.md  package-lock.json  package.json  test-output.txt  tsconfig.json  tsconfig.test.json
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: README.md  expected.json  run.ts
community-rules/: README.md  api-security.yaml  devops-cicd.yaml  enterprise-dlp.yaml  finance-pci.yaml  healthcare-hipaa.yaml
docs/: API.md  CI-CD.md  mcp-firewall.md
examples/: firewall.yaml
promotion/: content.md
python/: README.md  pyproject.toml  setup.py
python/clawguard/: __init__.py
python/tests/: test_clawguard.py
references/: README.md
rules.d/: README.md
skill/: SKILL.md
src/: alert-engine.ts  analyzer.ts  anomaly-detector.ts  audit-logger.ts  cli.ts  compliance-reporter.ts  cost-engine.ts  cost-tracker.ts  dashboard.ts  index.ts  integrity.ts  intent-action.ts  interceptor.ts  policy-engine.ts  risk-engine.ts  sanitizer.ts  security-engine.ts  security.ts  skill-scanner.ts  store.ts  threat-intel.ts  types.ts  utils.ts  yara-engine.ts
tests/: additional-patterns.test.ts  ai-generate.test.ts  alert-engine.test.ts  audit-logger.test.ts  cli.test.ts  compliance-reporter.test.ts  cost-engine-extended.test.ts  cost-engine.test.ts  custom-rules-v2.test.ts  custom-rules.test.ts  exporters.test.ts  github-action.test.ts  index-exports.test.ts  integration.test.ts  integrity.test.ts  (+25 more)
(+143 files in other folders)
